--- a/index.html
+++ b/index.html
@@ -1,160 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Биография SolorBlaze</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2, h3 {
-            color: #444;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        h2 {
-            border-bottom: 2px solid #ddd;
-            padding-bottom: 10px;
-            margin-top: 30px;
-        }
-        p {
-            margin: 10px 0;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        ul li {
-            background: #f9f9f9;
-            margin: 10px 0;
-            padding: 10px;
-            border-left: 4px solid #007BFF;
-            border-radius: 4px;
-        }
-        .project {
-            background: #e9f5ff;
-            padding: 15px;
-            border-radius: 8px;
-            margin: 20px 0;
-        }
-        .project h3 {
-            margin-top: 0;
-        }
-        .project p {
-            margin: 10px 0;
-        }
-        .skills {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin: 20px 0;
-        }
-        .skill {
-            background: #007BFF;
-            color: #fff;
-            padding: 5px 10px;
-            border-radius: 4px;
-            font-size: 0.9em;
-        }
-        a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://bio.site/solorblaze">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Биография SolorBlaze</h1>
-
-        <!-- Раздел "О себе" -->
-        <section>
-            <h2>О себе</h2>
-            <p>
-                Привет! Меня зовут SolorBlaze, и я — программист с опытом разработки на Python, C# и C++. 
-                Моя страсть к технологиям началась с изучения основ программирования, и с тех пор я постоянно 
-                совершенствую свои навыки, создавая полезные и интересные проекты.
-            </p>
-            <p>
-                Я специализируюсь на разработке программного обеспечения, автоматизации процессов и создании 
-                инструментов для упрощения работы с данными. Моя цель — создавать качественные и удобные решения, 
-                которые помогают людям и бизнесу.
-            </p>
-        </section>
-
-        <!-- Раздел "Навыки" -->
-        <section>
-            <h2>Навыки</h2>
-            <div class="skills">
-                <span class="skill">Python</span>
-                <span class="skill">C#</span>
-                <span class="skill">C++</span>
-                <span class="skill">Git</span>
-                <span class="skill">ООП</span>
-                <span class="skill">Алгоритмы</span>
-                <span class="skill">Автоматизация</span>
-                <span class="skill">Работа с данными</span>
-            </div>
-        </section>
-
-        <!-- Раздел "Проекты" -->
-        <section>
-            <h2>Проекты</h2>
-            <div class="project">
-                <h3>BinLoader Hub</h3>
-                <p>
-                    <strong>Описание:</strong> BinLoader Hub — это проект, который позволяет создавать и восстанавливать 
-                    файлы с помощью уникальных <code>.bin</code> архивов. Проект включает загрузчики, которые упрощают 
-                    работу с файлами и экономят время.
-                </p>
-                <p>
-                    <strong>Технологии:</strong> Python, Pickle, работа с файловой системой.
-                </p>
-                <p>
-                    <strong>Особенности:</strong>
-                    <ul>
-                        <li>Создание <code>.bin</code> архивов.</li>
-                        <li>Восстановление файлов из архивов.</li>
-                        <li>Простота использования и надежность.</li>
-                    </ul>
-                </p>
-                <p>
-                    <strong>Ссылка на Telegram-канал:</strong> 
-                    <a href="https://t.me/binloader_hub" target="_blank">@binloader_hub</a>
-                </p>
-            </div>
-        </section>
-
-        <!-- Раздел "Контакты" -->
-        <section>
-            <h2>Контакты</h2>
-            <p>
-                Если у вас есть вопросы или предложения, вы можете связаться со мной:
-            </p>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:solorblazedev@gmail.com">solorblazedev@gmail.com</a></li>
-                <li><strong>Telegram:</strong> <a href="https://t.me/solorblaze" target="_blank">@solorblaze</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/solorblaze" target="_blank">github.com/solorblaze</a></li>
-            </ul>
-        </section>
-    </div>
+    <p>If you are not redirected automatically, <a href="https://bio.site/solorblaze">click here</a>.</p>
 </body>
 </html>
